# EDA-Walmart

./: .gitignore  EDA.ipynb  README.md  _quarto.yml  index.qmd  main.py  parquet.py  pyproject.toml
data/: calendar.parquet  sample_submission.parquet  sell_prices.parquet
docs/: EDA.html  index.html  search.json
