[project]
name = "ventagium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "duckdb>=1.3.1",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
]
